added cart and login
I added the cart context/provider and the car screen. I also added a register/authentication screen and it is using Firebase. Authentication screen needs a lot more user-proofing.

--- a/app.json
+++ b/app.json
@@ -17,13 +17,16 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.tonystacos",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.tonystacos",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
