--- a/package.json
+++ b/package.json
@@ -8,22 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^11.3.2",
+    "@react-native-firebase/auth": "^11.3.2",
     "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-cli": "^4.3.2",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.4.1",
+    "install": "^0.13.0",
+    "npm": "^7.10.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation-drawer": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
