--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.4.1",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "npm": "^7.10.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-fast-toast": "^2.3.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-drawer": "^2.7.0"
